[package]
name = "srls"
version = "0.2.0"
edition = "2021"

[dependencies]
glob = "*"
pest = "2.0"
pest_derive = "2.0"
tokio = { version = "1", features = ["full"] }
tower-lsp = "*"
serde = "*"
serde_json = "*"
tracing-subscriber = "*"
tracing-appender = "*"
dashmap = "5.4.0"
log = "*"
simple-logging = "2.0.2"
walkdir = "*"

[build]
target = "x86_64-unknown-linux-musl"
